...
    android:background="@drawable/white_border"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--DELETE BTN-->
    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/mood_event"
        android:layout_alignBottom="@+id/mood_event"
        android:layout_alignParentEnd="true"
        android:paddingRight="20dp"
...
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="#2f2f2f">

        <!--EMOTICON-->
        <ImageView
            android:id="@+id/emoticon"
            android:layout_width="100dp"
            android:layout_height="100dp"></ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
