...
            android:clipChildren="false"
            android:clipToPadding="false"
            android:queryHint="Filter Your Moooods..."
            android:theme="@android:style/Theme.Holo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/posts_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

<!--floating action button-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat= "@android:drawable/ic_input_add"
        app:backgroundTint="@android:color/holo_red_light"
...
